<resources>
    <string name="app_name">ToDo Manager</string>
    <string name="title_task_detail">Task Detail</string>
    <string name="title_edit_task_1">Task information</string>
    <string name="title_edit_task_2">Set deadline</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="complete_task_dialog_message">Task \'%1$s\' will be completed. Do you want to continue?</string>
    <string name="cancel_task_dialog_message">Task \'%1$s\' will be canceled. Do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="task_completed">The task has been completed correctly.</string>
    <string name="percentage_completed">%1$d%% completed</string>
    <string name="task_canceled">The task has been canceled correctly.</string>
    <string name="task_details_title">Task details</string>
    <string name="task_name">Title:</string>
    <string name="task_priority">Priority:</string>
    <string name="high_priority">High</string>
    <string name="medium_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="task_description">Description:</string>
    <string name="task_deadline">Deadline:</string>
    <string name="task_status">Status:</string>
    <string name="pending_task">Pending</string>
    <string name="completed_task">Completed</string>
    <string name="canceled_task">Canceled</string>
    <string name="task_completion">Completion:</string>
    <string name="edit_task">Edit</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="complete_task">Complete task</string>
    <string name="cancel_task">Cancel task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish_button">Finish</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="task_is_complex">Is complex</string>
    <string name="task_has_deadline">Has deadline</string>
    <string name="task_added">The task has been added to your pending list.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="deadline_category_title">Expiration notification</string>
    <string name="near_deadline_category_title">Near expiration notification</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notify_deadline">Notify expiration</string>
    <string name="notify_near_deadline">Notify near expiration</string>
    <string name="notify_deadline_sum">Notifies when a deadline has expired.</string>
    <string name="notify_near_deadline_sum">Notifies when a deadline is just 3 days to expire.</string>
    <string name="hide_completed">Hide completed tasks</string>
    <string name="hide_canceled">Hide canceled tasks</string>
    <string name="hide_completed_sum">hides the completed tasks on the list.</string>
    <string name="hide_canceled_sum">Hides the canceled tasks on the list.</string>
    <string name="title_activity_contact">Contact support</string>
    <string name="full_name">Name:</string>
    <string name="email">E-mail:</string>
    <string name="message">Message:</string>
    <string name="send_button">Send</string>
    <string name="send_message_confirmation">The message will be sent to our support team. Do you want to continue?</string>
    <string name="add_task">Add task</string>
    <string name="help_file_name">help.html</string>
    <string name="error_task_title">Wrong info</string>
    <string name="error_task_message">The title of the task cannot be empty.</string>
    <string name="ok">OK</string>
    <string name="empty_name_msg">Your name cannot be empty.</string>
    <string name="invalid_email_msg">Your email is invalid. Please, check it.</string>
    <string name="empty_body_msg">The body of the message cannot be empty.</string>
</resources>
