<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="notify_deadline"
        android:title="@string/notify_deadline"
        android:summary="@string/notify_deadline_sum"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="notify_near_deadline"
        android:title="@string/notify_near_deadline"
        android:summary="@string/notify_near_deadline_sum"/>

<PreferenceCategory
    android:title="@string/deadline_category_title">
    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notify_deadline"
        android:key="deadline_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notify_deadline"
        android:key="deadline_vibrate"
        android:title="@string/pref_title_vibrate" />
</PreferenceCategory>

    <PreferenceCategory
        android:title="@string/near_deadline_category_title">
        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notify_near_deadline"
            android:key="near_deadline_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notify_near_deadline"
            android:key="near_deadline_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>
</PreferenceScreen>
